--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ middle_name:
 last_name: Rodrian
 contact_note: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  PhD Student in Economics
+  PhD Student in Economics at University of Zurich
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords: Public, Labor, Economics # add your own keywords or leave empty
+keywords: public economics, labor economics, phd # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: icon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
